[package]
name = "rs-optimizer"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.183", features = ["derive"] }
once_cell = "1.9"
serde_json = "1.0"
axum = "0.7.5"
bcrypt = "0.15.1"
dotenv = "0.15.0"
axum-macros = "0.4.1"
jsonwebtoken = "9.3.0"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8"
regex = "1.11.0"
sysinfo = "0.32.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
base64 = "0.22.1"
pyo3 = { version = "0.23.3", features = ["extension-module"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"